--- a/boman.yaml
+++ b/boman.yaml
@@ -2,15 +2,18 @@ Auth:
   project_token: "48102595-62aa-4336-ab6d-79349c9ec1d6"
   customer_token:  "389e4d4a-ece0-4c1c-be13-384b1434c0f6"
 
-
-SAST:
-   language: "ruby" 
    
 SCA:
    language: "js" 
 
+SAST:
+  language: "ruby" 
+
 DAST:
-   type: "API" ## API, WebApp 
-   URL: "http://demo.testfire.net" 
+  type: "API" ## API, WEB, WEB-ADV
+  URL: "http://demo.testfire.net" 
 
 Secret_Scan: True
+
+
+
