--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,10 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: boman-cli -a run
+        continue-on-error: true
 
 ## download artifcats part
+        if: always()
       - uses: actions/download-artifact@v3
         with:
           name: my-artifact
