--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Boman SAST
+      - name: Install packages
         run: pip install boman-cli==0.9
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: sudo boman-cli -a run
+      - name: Run scan  
+        run: boman-cli -a run
         
 
 ## download artifcats part
