--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,15 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Install packages
-        run: pip install boman-cli==0.9
-      - name: Run scan  
-        run: boman-cli -a run
-        
+     # - name: Install packages
+      #  run: pip install boman-cli==0.9
+     # - name: Run scan  
+      #  run: boman-cli -a run
+      
+      - name: pull image
+        run: docker pull owasp/zap2docker-stable 
+      - name: run sample
+        run: docker run -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable touch /zap/wrk/test.txt
 
 ## download artifcats part
      #   if: always()
