--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,14 @@ jobs:
      # - name: Run scan  
       #  run: boman-cli -a run
       
+      - name: change permission of current folder
+        run: chmod 760 ./
       - name: pull image
-        run: ls -l
+        run: docker pull owasp/zap2docker-stable 
+      - name: run sample
+        run: docker run --user $(id -u):$(id -g) -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable touch /zap/wrk/test.txt
+  
+        
         
 ## download artifcats part
      #   if: always()
