--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,19 +24,17 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-     # - name: Install packages
-      #  run: pip install boman-cli==0.9
-     # - name: Run scan  
-      #  run: boman-cli -a run
       
       - name: change permission of current folder
         run: chmod 760 ./
-      - name: pull image
-        run: docker pull owasp/zap2docker-stable 
-      - name: run sample
-        run: docker run --user $(id -u):$(id -g) -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable touch /zap/wrk/test.txt
+     #  Runs a single command using the runners shell
+      - name: Install packages
+        run: pip install boman-cli==0.9
+      - name: Run scan  
+        run: boman-cli -a run
+      
+  
+   
   
         
         
