--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,16 @@ jobs:
       
       - name: change permission of current folder
         run: chmod 760 ./
+      - name: pull image
+        run: docker pull owasp/zap2docker-stable 
+      - name: run sample
+        run: docker run --user $(id -u):$(id -g) -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable zap-baseline.py -j -t https://demo.testfire.net/ -g gen.conf -J full_scan_02.json  
+        
      #  Runs a single command using the runners shell
-      - name: Install packages
-        run: pip install boman-cli==0.9
-      - name: Run scan  
-        run: boman-cli -a run
+    #  - name: Install packages
+    #    run: pip install boman-cli==0.9
+    #  - name: Run scan  
+      #  run: boman-cli -a run
       
   
    
