--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,13 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: change permission of current folder
-        run: chmod 760 ./
+        run: cd ../
+      - name: change permission of current folder
+        run: chmod 760 ./railsgot/
       - name: pull image
         run: docker pull owasp/zap2docker-stable 
       - name: run sample
-        run: docker run --user $(id -u):$(id -g) -v $(pwd):/zap/wrk/:rw --rm owasp/zap2docker-stable zap-baseline.py -t https://demo.testfire.net/ -g gen.conf -J aranga.json  
+        run: docker run --user $(id -u):$(id -g) -v $(pwd):/zap/wrk/:rw owasp/zap2docker-stable zap-baseline.py -t https://demo.testfire.net/ -J aranga.json  
         
      #  Runs a single command using the runners shell
     #  - name: Install packages
