--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: change permission of current folder
         run: pwd
       - name: change permission of current folder
-        run: chmod 760 $(pwd)
+        run: sudo chmod 760 /home/runner/work/railsgot/railsgot
       - name: pull image
         run: docker pull owasp/zap2docker-stable 
       - name: run sample
