--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,11 @@ jobs:
       - name: change permission of current folder
         run: pwd
       - name: change permission of current folder
-        run: sudo chmod 760 /home/runner/work/railsgot/railsgot
+        run: sudo chmod 760 /home/runner/work/railsgot/railsgot/
       - name: pull image
-        run: docker pull owasp/zap2docker-stable 
+        run: sudo docker pull owasp/zap2docker-stable 
       - name: run sample
-        run: sudo docker run --user $(id -u):$(id -g) -v $(pwd):/zap/wrk/:rw owasp/zap2docker-stable zap-baseline.py -t https://demo.testfire.net/ -J aranga.json  
+        run: sudo docker run -v $(pwd):/zap/wrk/:rw owasp/zap2docker-stable zap-baseline.py -t https://demo.testfire.net/ -J aranga.json  
         
      #  Runs a single command using the runners shell
     #  - name: Install packages
