--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Install packages
-        run: pip install boman-cli==0.10
+        run: pip install boman-cli
       - name: Run scan  
         run: boman-cli -a run
       
