--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,9 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Install packages
-        run: sudo pip install boman-cli
+        run: pip install boman-cli
       - name: Run scan  
-        run: sudo boman-cli -a run
+        run: boman-cli -a run
       
   
    
