--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,19 @@
-# This is a basic workflow to help you get started with Actions
+on: [push]
 
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  chain_bench_scan:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    name: Test Job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-   
-        
-      # Runs a single command using the runners shell
-      - name: Install packages
-        run: pip install boman-cli
-      - name: Run scan  
-        run: boman-cli -a run
-      
-  
-   
-  
-        
-        
-## download artifcats part
-     #   if: always()
-#      - uses: actions/download-artifact@v3
-    #    with:
-    #      name: my-artifact
+      - name: Checkout
+        uses: actions/checkout@v3
 
-   #   - name: Display structure of downloaded files
-    #    run: ls -R
-#
+      - name: Chain Bench
+        id: chain-bench
+        uses: ./
+        with:
+          repository-url: https://github.com/Aj-tiara/cicd-goat-1.git
+          github-token: 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
+
+      - name: Echo
+        run: echo ${{ steps.chain-bench.outputs.chain-bench-result }}
