--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,14 @@
 on: [push]
 
 jobs:
-  chain_bench_scan:
+  boman_scan:
     runs-on: ubuntu-latest
     name: Test Job
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Chain Bench
-        id: chain-bench
-        uses: ./
-        with:
-          repository-url: https://github.com/Aj-tiara/cicd-goat-1.git
-          github-token: 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
-
-      - name: Echo
-        run: echo ${{ steps.chain-bench.outputs.chain-bench-result }}
+      - name: Boman
+        run: |
+          sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==0.8
+          sudo boman-cli-uat -a run -u https://devapi.boman.ai/v2/
