--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
 
       - name: Boman
         run: |
-          sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==0.23
-          sudo boman-cli-uat -a run -u https://dashboard.boman.ai/v2/ -fb only-critical
+          sudo pip install boman-cli==1.5
+          sudo boman-cli -a run -fb only-high
 #       - name: Upload boman result raw file
 #         uses: actions/upload-artifact@v3
 #         with:
