--- a/boman.yaml
+++ b/boman.yaml
@@ -4,16 +4,17 @@ Auth:
 #   project_token: "52ecbe5a-3f96-433e-adbb-2b58a27d36ff"
 #   customer_token: "4941f85a-5453-4f94-9247-d5565b4bd116" # dev
    
-SCA:
-  language: "ruby" 
+#SCA:
+  #language: "ruby" 
 
 #SAST:
  # language: "semgrep"
 
  
-#DAST:
- # type: "WEB" ## API, dWEB, WEB-ADV
-  #URL: "https://juice-shop.herokuapp.com/" 
+DAST:
+  type: "WEB" ## API, dWEB, WEB-ADV
+  URL: "https://demo.testfire.net/" 
+  auth: "yes"
 
 #Secret_Scan: True
 
