--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Boman
         run: |
           sudo pip install --upgrade pip
-          sudo pip install -i https://test.pypi.org/simple/ boman-cli-uat==12.2
+          sudo pip install --index-url=https://test.pypi.org/simple/ boman-cli-uat==12.2
           sudo boman-cli-uat -a run -u https://devapi.boman.ai/v2/
 #       - name: Upload boman result raw file
 #         uses: actions/upload-artifact@v3
