--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,8 @@ jobs:
 
       - name: Boman
         run: |
-          sudo pip install --upgrade pip
-          sudo pip install --index-url=https://test.pypi.org/simple/ boman-cli-uat==12.2
-          sudo boman-cli-uat -a run -u https://devapi.boman.ai/v2/
+          pip install --index-url=https://test.pypi.org/simple/ boman-cli-uat==12.3
+          boman-cli-uat -a run -u https://devapi.boman.ai/v2/
 #       - name: Upload boman result raw file
 #         uses: actions/upload-artifact@v3
 #         with:
