--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
         run: |
           pip install coloredlogs==15.0.1
           pip install docker==5.0.3
+          pip install xmltodict==0.12.0
           pip install --index-url=https://test.pypi.org/simple/ boman-cli-uat==12.3
           boman-cli-uat -a run -u https://devapi.boman.ai/v2/
 #       - name: Upload boman result raw file
