--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
 
       - name: Boman
         run: |
-          pip install coloredlogs==15.0.1
-          pip install docker==5.0.3
-          pip install xmltodict==0.12.0
-          pip install --index-url=https://test.pypi.org/simple/ boman-cli-uat==12.3
-          boman-cli-uat -a run -u https://devapi.boman.ai/v2/
+          sudo pip install coloredlogs==15.0.1
+          sudo pip install docker==5.0.3
+          sudo pip install xmltodict==0.12.0
+          sudo pip install --index-url=https://test.pypi.org/simple/ boman-cli-uat==12.3
+          sudo boman-cli-uat -a run -u https://devapi.boman.ai/v2/
 #       - name: Upload boman result raw file
 #         uses: actions/upload-artifact@v3
 #         with:
