--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,7 @@ jobs:
 
       - name: Boman
         run: |
-          sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==12.3
-          sudo boman-cli-uat -a run -u https://devapi.boman.ai/v2/
+          sudo docker run --rm -v ${PWD}:/zap/wrk/:rw -t owasp/zap2docker-stable:latest zap.sh -cmd -autorun /zap/wrk/boman_zap_auth_plan.yaml
       - name: Upload boman result raw file
         uses: actions/upload-artifact@v3
         with:
