--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
 
       - name: Boman
         run: |
-          sudo docker run --user $(id -u):$(id -g) -v ${PWD}:/zap/wrk/:rw -t owasp/zap2docker-stable:latest zap.sh -cmd -autorun /zap/wrk/boman_zap_auth_plan.yaml
+          sudo docker run --user=zap -v ${PWD}:/zap/wrk/:rw -t owasp/zap2docker-stable:latest zap.sh -cmd -autorun /zap/wrk/boman_zap_auth_plan.yaml
       - name: Upload boman result raw file
         uses: actions/upload-artifact@v3
         with:
