--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
 
       - name: Boman
         run: |
-          sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==12.5
+          sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==12.5 -uid root
           sudo boman-cli-uat -a run -u https://devapi.boman.ai/v2/
           #sudo pip install boman-cli
           #sudo boman-cli -a run 
