--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
           #sudo python3 -m pip install -U setuptools
           #sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==12.7
           #sudo boman-cli-uat -a run -u https://devapi.boman.ai/v2/ -uid $(id -u)
-          sudo pip install boman-cli
-          sudo boman-cli -a run 
+          pip install boman-cli
+          boman-cli -a run 
       - name: Upload boman result raw file
         uses: actions/upload-artifact@v3
         with:
