--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,29 @@
-on: [workflow_dispatch]
+# This is a basic workflow to help you get started with boman.ai
 
+name: Bomanai Scanner
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  boman_scan:
+  Boman-scan:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    name: Test Job
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Boman
-        run: |
-          #sudo python3 -m pip install -U pip
-          #sudo python3 -m pip install -U setuptools
-          #sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==12.7
-          #sudo boman-cli-uat -a run -u https://devapi.boman.ai/v2/ -uid $(id -u)
-          pip install boman-cli
-          boman-cli -a run 
-      - name: Upload boman result raw file
-        uses: actions/upload-artifact@v3
-        with:
-          name: artifact files
-          path: boman*
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      
+      # Runs a single command using the runners shell
+      - name: docker
+        run: pip install  docker
+      - name: Install packages
+        run: pip install  boman-cli==1.6
+      - name: Run scan  
+        run: boman-cli
