--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: setup upgrade
         run: python -m pip install --upgrade pip
-      - name: docker
-        run: pip install docker
-      - name: setup instakk
-        run: pip install --upgrade setuptools
       - name: Install packages
-        run: pip install  boman-cli==1.6
+        run: pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==12.8
       - name: Run scan  
-        run: boman-cli
+        run: boman-cli-uat -a run
