--- a/.github/workflows/marketplace.yml
+++ b/.github/workflows/marketplace.yml
@@ -22,7 +22,11 @@ jobs:
       
       # Runs a single command using the runners shell
       - name: boman-ai-action
-        uses: i4mmaddy/boman-ai-action@v3
+        uses: i4mmaddy/boman-ai-action@v4
         with:
-          args: '-a run'
+          action: 'run' # or test-saas, test-yaml
+          failbuild: 'high' #optional # or 'high' or 'medium or 'low'
+          #zap_session_script: 'path/to/your/zap_session_script' #optional
+          #config: 'path/to/your/config' #optional
+          use-sudo: 'true'
             
