--- a/.github/workflows/marketplace.yml
+++ b/.github/workflows/marketplace.yml
@@ -27,6 +27,7 @@ jobs:
           action: 'run' # or test-saas, test-yaml
           #failbuild: 'high' #optional # or 'high' or 'medium or 'low'
           #zap_session_script: 'path/to/your/zap_session_script' #optional
-          #config: 'path/to/your/config' #optional
+          config: './boman_dev.yaml' #optional
           use-sudo: 'true' #default is true
+          url: 'https://devapi.boman.ai/v2'
             
