--- a/boman_qa.yaml
+++ b/boman_qa.yaml
@@ -1,15 +1,16 @@
 ---
 Auth:
-  project_token: c2718976-4dee-42b9-919c-fc5f059cd1cd
-  customer_token: 42b9bed6-17cd-4b38-9fb7-47737e47f88c
+  project_token: "f9b4844c-aba2-4765-a281-d5faf75e4324"
+  customer_token: "42b9bed6-17cd-4b38-9fb7-47737e47f88c"
+   
+Secret_Scan: True
+
+
 SAST:
-  language: semgrep
-SCA:
-  language: python
-Secret_Scan: true
+  language: "semgrep"
 
 
 DAST:
-  type: "WEB"
-  URL: "https://demo.testfire.net/"
-
+  type: "WEB" ## API, dWEB, WEB-ADV
+  URL: "http://demo.testfire.net" 
+  Auth : "yes"
