--- a/boman.yaml
+++ b/boman.yaml
@@ -3,11 +3,12 @@ Auth:
   customer_token: "ad752d56-f8e8-4b3c-a70a-d35abaee21b3"
 
    
-Secret_Scan: True
+#Secret_Scan: True
 
 DAST:
   type: "WEB" ## API, dWEB, WEB-ADV
   URL: "http://testfire.net/"
+  auth: "yes"
 
-SAST:
-  language: "semgrep"
+#SAST:
+ # language: "semgrep"
