--- a/.github/workflows/uat.yaml
+++ b/.github/workflows/uat.yaml
@@ -22,3 +22,12 @@ jobs:
         run: sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat
       - name: Run scan  
         run: sudo boman-cli-uat -a run -config ./boman_qa.yaml -u https://qa.boman.ai
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-artifacts
+          path: |
+            boman_zap_auth_plan.yaml
+            session_management.js
+          retention-days: 5
