--- a/boman_qa.yaml
+++ b/boman_qa.yaml
@@ -1,5 +1,5 @@
 Auth:
-  project_token: "e791202f-6435-456e-b8a9-06b4cfcb114f"
+  project_token: "e3a1dd22-f01f-4bcb-aa65-a96c7ebceb48"
   customer_token: "5b2f4dbd-a873-4042-8441-ff38fef71ed5"
    
 #DAST:
@@ -7,12 +7,12 @@ Auth:
  # URL: "http://demo.testfire.net" 
  # auth : "yes"
    
-SAST:
-  language: "semgrep"
+#SAST:
+  #language: "semgrep"
 
-SCA:
-  language: "js" #language optional
+#SCA:
+ # language: "js" #language optional
  
 #Secret_Scan: True
   
-SBOM: true
+#SBOM: true
