--- a/.github/workflows/uat.yaml
+++ b/.github/workflows/uat.yaml
@@ -22,8 +22,8 @@ jobs:
         run: sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==15.2.3
         #sudo pip install boman-cli
       - name: Run scan  
-        run: sudo boman-cli-uat -a run -u https://qa.boman.ai  -at e3a1dd22-f01f-4bcb-aa65-a96c7ebceb48 -ct 5b2f4dbd-a873-4042-8441-ff38fef71ed5
-        #-config ./boman_qa.yaml
+        run: sudo boman-cli-uat -a run -u https://qa.boman.ai -config ./boman_qa.yaml #  -at e3a1dd22-f01f-4bcb-aa65-a96c7ebceb48 -ct 5b2f4dbd-a873-4042-8441-ff38fef71ed5
+        
         #sudo boman-cli -a run -u https://dashboard.boman.ai/ -at ${{secrets.BOMAN_APP_TOKEN}} -ct ${{secrets.BOMAN_CUSTOMER_TOKEN}}
 
       - name: Upload Artifacts
