--- a/boman_qa.yaml
+++ b/boman_qa.yaml
@@ -2,10 +2,10 @@ Auth:
   project_token: "e3a1dd22-f01f-4bcb-aa65-a96c7ebceb48"
   customer_token: "5b2f4dbd-a873-4042-8441-ff38fef71ed5"
    
-#DAST:
- # type: "WEB" ## API, dWEB, WEB-ADV
- # URL: "http://demo.testfire.net" 
-  #auth : "yes"
+DAST:
+  type: "WEB" ## API, dWEB, WEB-ADV
+  URL: "http://demo.testfire.net" 
+  auth : "yes"
    
 SAST:
   language: "semgrep"
