--- a/.github/workflows/uat.yaml
+++ b/.github/workflows/uat.yaml
@@ -22,7 +22,7 @@ jobs:
         run: sudo pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==15.3.7
         #sudo pip install boman-cli
       - name: Run scan  
-        run: sudo boman-cli-uat -a run -u https://qa.boman.ai ./boman_qa.yaml
+        run: sudo boman-cli-uat -a run -u https://qa.boman.ai -config ./boman_qa.yaml
         
         #sudo boman-cli -a run -u https://dashboard.boman.ai/ -at ${{secrets.BOMAN_APP_TOKEN}} -ct ${{secrets.BOMAN_CUSTOMER_TOKEN}}
 
