--- a/boman_qa.yaml
+++ b/boman_qa.yaml
@@ -1,21 +1,21 @@
 Auth:
-  project_token: "e3a1dd22-f01f-4bcb-aa65-a96c7ebceb48"
+  project_token: "678d2ddf-ed91-4d8a-80ca-8c2ec26ef27b"
   customer_token: "5b2f4dbd-a873-4042-8441-ff38fef71ed5"
    
-DAST:
-  type: "WEB" ## API, dWEB, WEB-ADV
-  URL: "http://demo.testfire.net" 
+#DAST:
+ # type: "WEB" ## API, dWEB, WEB-ADV
+  #URL: "http://demo.testfire.net" 
   #auth : "yes"
    
 SAST:
-  language: "semgrep"
+  language: "opengrep"
 
-SCA:
-  language: "js" #language optional
+#SCA:
+ # language: "js" #language optional
  
-Secret_Scan: True
+#Secret_Scan: True
   
-SBOM: true
+#SBOM: true
 
 
 container_scan:
