--- a/.github/workflows/depscan.yml
+++ b/.github/workflows/depscan.yml
@@ -23,4 +23,13 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run Depscan
         run: docker run --rm -v $PWD:/app ghcr.io/owasp-dep-scan/dep-scan depscan --src /app --reports-dir /app/depscan/
+
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-artifacts
+          path: |
+            /depscan/
+          retention-days: 5   
         
