--- a/.github/workflows/depscan.yml
+++ b/.github/workflows/depscan.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with boman.ai
 
-name: Bomanai Scanner
+name: Depscan Scanner
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
 #  push:
