--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -28,4 +28,11 @@ jobs:
         # Pass any additional env vars if needed, though the script reads standard GITHUB_* vars automatically
         PYTHONUNBUFFERED: 1
 
+    - name: Upload Reports
+      uses: actions/upload-artifact@v4
+      with:
+        name: security-reports
+        path: |
+          ci_git_report.json
+
 
